src/tui/widgets/snapshots/ralph_wiggum__tui__widgets__command_palette__tests__snapshot_empty_query_all_items.snap
---
source: src/tui/widgets/command_palette.rs
expression: snap(&buffer)
---





                 > │
                 ──────────────────────────────────────────────
                 [Task] Add Task  Create a new task
                 [Task] Edit Task  Modify existing task
                 [Task] Delete Task
                 [Worker] Start Worker  Launch a new worker
                 [Worker] Stop Worker
                 [Setting] Change Theme  Switch color theme
