src/tui/widgets/snapshots/ralph_wiggum__tui__widgets__command_palette__tests__snapshot_fuzzy_highlight.snap
---
source: src/tui/widgets/command_palette.rs
expression: snap(&buffer)
---




                 > et│
                 ──────────────────────────────────────────────
                 [Task] Delete Task
                 [Task] Edit Task  Modify existing task
                 [Setting] Change Theme  Switch color theme
