src/tui/widgets/snapshots/ralph_wiggum__tui__widgets__command_palette__tests__snapshot_narrow_terminal.snap
---
source: src/tui/widgets/command_palette.rs
expression: snap(&buffer)
---


      > │
      ────────────────────────────
      [Task] Add Task  Create a ne
      [Task] Edit Task  Modify exi
      [Task] Delete Task
      [Worker] Start Worker  Launc
      [Worker] Stop Worker
      [Setting] Change Theme  Swit
