src/tui/widgets/snapshots/ralph_wiggum__tui__widgets__command_palette__tests__snapshot_no_results.snap
---
source: src/tui/widgets/command_palette.rs
expression: snap(&buffer)
---








                 > zzzzz│
                 ──────────────────────────────────────────────
