src/tui/widgets/snapshots/ralph_wiggum__tui__widgets__command_palette__tests__snapshot_single_result.snap
---
source: src/tui/widgets/command_palette.rs
expression: snap(&buffer)
---







                 > start│
                 ──────────────────────────────────────────────
                 [Worker] Start Worker  Launch a new worker
