src/tui/widgets/snapshots/ralph_wiggum__tui__widgets__command_palette__tests__snapshot_with_icons.snap
---
source: src/tui/widgets/command_palette.rs
expression: snap(&buffer)
---



             > │
             ──────────────────────────────────
             + [Task] Add Task  Create new
             - [Task] Delete Task
